tests/fail/use_before_decl.tc
int main() {
  return x;
  int x = 1;
}
